# Classifying_solar_daily_generation

./: .gitignore  README.md
classification/: pyproject.toml
classification/src/libs/: data_gathering.py  final.csv  gather_weather_data.py  main_script.py  manipulating_data.py  model_generation.py  s3.py
src/lambdas/: pyproject.toml
src/lambdas/classification/: Dockerfile  docker-compose.yml  pyproject.toml
src/lambdas/classification/src/: lambda_function.py  test_handler.py
src/lambdas/classification/src/libs/: data_gathering.py
